P5 E-Learning/force-app/main/default/objects/Progress_Module_Per_Unit__c/Progress_Module_Per_Unit__c.object-meta.xml
<CustomObject>
    <label>Progress Module Per Unit</label>
    <nameField>
        <displayFormat>PT-{0}</displayFormat>
        <label>Progress Module Per Unit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Progresses Module Per Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>