P5 E-Learning/force-app/main/default/objects/Progress_Module_Per_Unit__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <referenceTo>Module__c</referenceTo>
    <relationshipLabel>Progresses Module Per Units</relationshipLabel>
    <relationshipName>Progresses_Module_Per_Units</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>