P5 E-Learning/force-app/main/default/objects/Progress_Module_Per_Unit__c/fields/Module_Progress__c.field-meta.xml
<CustomField>
    <fullName>Module_Progress__c</fullName>
    <formula>Unit_Quantity__c / Module__r.Units_Related__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Module Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>