P5 E-Learning/force-app/main/default/objects/Progress_Module_Per_Unit__c/fields/Total_Unit_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Unit_Score__c</fullName>
    <label>Total Unit Score</label>
    <summarizedField>Progress_Unit_Per_Response__c.Score__c</summarizedField>
    <summaryForeignKey>Progress_Unit_Per_Response__c.Progress_Module_Per_Unit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>