P5 E-Learning/force-app/main/default/objects/Progress_Module_Per_Unit__c/fields/Unit_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Unit_Quantity__c</fullName>
    <label>Unit Quantity</label>
    <summaryForeignKey>Progress_Unit_Per_Response__c.Progress_Module_Per_Unit__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>