P5 E-Learning/force-app/main/default/objects/Progress_Module_Per_Unit__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Progresses Module Per Units</relationshipLabel>
    <relationshipName>Progresses_Module_Per_Units</relationshipName>
    <type>Lookup</type>
</CustomField>