P5 E-Learning/force-app/main/default/objects/Progress_Module_Per_Unit__c/validationRules/Inactive_Module.validationRule-meta.xml
<ValidationRule>
    <fullName>Inactive_Module</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(Module__r.Active__c)</errorConditionFormula>
    <errorMessage>Module is not active</errorMessage>
</ValidationRule>